Messages Fixed. Still working on creation of messages.